--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply px-4 py-2 rounded-lg font-medium inline-flex items-center justify-center tracking-tight;
+  }
+
+  .btn-primary {
+    @apply bg-black text-white;
+  }
+
+  .btn-text {
+    @apply bg-transparent text-black;
+  }
+
+  .logo-ticker-image {
+    @apply h-32 w-auto
+  }
+
+  .tag {
+    @apply text-sm inline-flex border border-[#222]/10 px-2 py-2 rounded-lg tracking-tight;
+  }
+}
